manifests/calendarrabbit/ingress-tailscale.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendarrabbit
  namespace: calendarrabbit
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: calendarrabbit-backend
            port:
              number: 8080
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: calendarrabbit-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calendarrabbit-frontend
            port:
              number: 80
  tls:
  - hosts:
    - calendarrabbit
